# job-extractor

./: .env.example  .gitignore  CHROME_EXTENSION.md  GOOGLE-SHEETS-QUICKSTART.md  LICENSE  MCP_SERVER.md  README.md  about.rtf  analyze-ama-logs.js  auto-workflow-config.yaml.example  jest.config.js  macos-reminder-config.yaml  macos-reminder-config.yaml.example  mcp-server.js  package-lock.json  package.json  reminder-config.yaml  requirements.txt  test-resume-prompt.js  unified-server.js
.claude/: settings.json
__tests__/: base-agent.test.ts  job-extractor-agent.test.ts  job-scorer-agent.test.ts  resume-creator-agent.test.ts  resume-critic-agent.test.ts  statement-agent.test.ts  web-scraper.test.ts
ama-app/: README.md  index.html  package.json
archive/: MIGRATION_NOTE.md
components/evaluation/python/: README.md  pyproject.toml  requirements.txt
components/evaluation/python/src/job_extractor_eval/: __init__.py  cli.py  evaluators.py
demo/: job-page.html
docs/: _config.yml  google-oauth-setup.md  google-sheets-integration.md  index.md  whogothired-gmail-setup.md  whogothired-setup.md
examples/: sheets-integration-example.ts
extension/: README.md  background.js  cli-server.js  content.css  content.js  manifest.json  popup.js  popup.js.unused
migration/: Code-refactored.gs
outputs/: ANTHONY BULL for Vice President, Application Development at DrFirst, Inc.-2026-01-12T21-32-01-008Z.md
prompts/: resume-creator-base.md  resume-creator-builder-fragments.md  resume-creator-leader-fragments.md  resume-creator-split-experience.md  resume-creator.md  (+7 more)
(+180 files in other folders)
