[project]
name = "job-extractor-eval"
version = "1.0.0"
description = "LangSmith evaluation framework for Job Extractor"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["langsmith", "evaluation", "llm", "job-extractor"]
authors = [
  {name = "Job Extractor Contributors"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
  "langsmith>=0.1.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=22.0.0",
  "mypy>=0.990",
]

[project.scripts]
evaluate-jobs = "job_extractor_eval.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
